--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -38,12 +38,21 @@ DEADLINE: <2021-12-12 周日 23:00 +1m> SCHEDULED: <2021-12-12 周日 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2021-12-06 周一 23:00 ++1w> SCHEDULED: <2021-12-04 周六 18:00 ++1w>
+DEADLINE: <2021-12-13 周一 23:00 ++1w> SCHEDULED: <2021-12-11 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-11-27 周六 16:47]
+:LAST_REPEAT: [2021-12-04 周六 15:55]
 :END:
+- State "DONE"       from "TODO"       [2021-12-04 周六 15:55] \\
+  1. 给所有带有品质的装备, 道具增加底图, 并根据品质变色
+  2. 给英雄对象添加光环, 根据英雄的稀有度绝对表现
+  3. spine编辑器扩充光环编辑
+  4. 完成代码模块整理
+  ------------------------------------------------
+  1. 读完了基金, 投资观与实践
+  2. 完成了小狗钱钱的读后感
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-11-27 周六 16:47] \\
   1. 新增一个拖拽容器, 使用拖动来各个角度浏览容器内元素
   2. 英雄山章节地图支持拖拽浏览
@@ -54,17 +63,17 @@ DEADLINE: <2021-12-06 周一 23:00 ++1w> SCHEDULED: <2021-12-04 周六 18:00 ++1
   1. 投资基金是一件长期的事, 持有的越长, 风险越低
   ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-11-20 周六 17:00] \\
- 1. 完成了行为协议嵌套解析功能
-    将中序发送的行为协议转为前序并在客户端执行
-  2. 完成了怒气表现客户端的接入
-     - 删除旧版怒气协议, 更新新版生命状态协议, 追加技能计数协议
-     - 命令解析器和组件支持怒气表现
-  3. 优化行为之间判断处理代码, 优化跳过战斗报错问题
-  ------------------------------------------------
-  1. <小狗钱钱>读完之后受益匪浅, 下周三必须写一个总结
-  ------------------------------------------------
-  1. 必须要做一个理财计划了, 不然财产贬值太快了, 必须想一个能在睡觉的时候都能赚钱的办法
-  2. 想要学口琴, 必须尽快开始
+  1. 完成了行为协议嵌套解析功能
+     将中序发送的行为协议转为前序并在客户端执行
+     1. 完成了怒气表现客户端的接入
+        - 删除旧版怒气协议, 更新新版生命状态协议, 追加技能计数协议
+        - 命令解析器和组件支持怒气表现
+     2. 优化行为之间判断处理代码, 优化跳过战斗报错问题
+     ------------------------------------------------
+     1. <小狗钱钱>读完之后受益匪浅, 下周三必须写一个总结
+     ------------------------------------------------
+     1. 必须要做一个理财计划了, 不然财产贬值太快了, 必须想一个能在睡觉的时候都能赚钱的办法
+     2. 想要学口琴, 必须尽快开始
 - State "DONE"       from "TODO"       [2021-11-13 周六 16:24] \\
   1. 完成了第三版战斗解析器
      - 下一个行为回同之前所有的未完成行为进行比较, 根据对应的规则决定执行时间
@@ -499,13 +508,21 @@ DEADLINE: <2021-12-06 周一 23:00 ++1w> SCHEDULED: <2021-12-04 周六 18:00 ++1
   ------------------------------------------------
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
-** TODO [#A] 每月归档到年度文件                                     :event:
-DEADLINE: <2021-11-30 周二 23:00 ++1m> SCHEDULED: <2021-11-30 周二 09:00 ++1m>
+** TODO [#A] 每月归档到年度文件                                      :event:
+DEADLINE: <2021-12-30 周四 23:00 ++1m> SCHEDULED: <2021-12-30 周四 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-11-01 周一 11:30]
+:LAST_REPEAT: [2021-11-30 周二 20:55]
 :END:
+- State "DONE"       from "TODO"       [2021-11-30 周二 20:55] \\
+  工作上:
+  1. 实现了一套新的战斗解析器和战斗打包，通过每个行为的前摇后摇来控制播放顺序
+  2. 解决了嵌套行为解析问题
+  3. 接入了怒气系统表现
+  4. 编写战斗系统文档
+  生活上:
+  1. 读完小狗钱钱
 - State "DONE"       from "TODO"       [2021-11-01 周一 11:30] \\
   工作上:
   1. 完成了《我所理解的cocos2dx》的学习
@@ -585,6 +602,14 @@ DEADLINE: <2021-11-30 周二 23:00 ++1m> SCHEDULED: <2021-11-30 周二 09:00 ++1
   4. 认识了很多很棒的同事
 ** TODO [#A] 设计理财计划                                           :event:
 DEADLINE: <2021-12-06 周一> SCHEDULED: <2021-11-22 周一 09:37>
+** TODO [#A] 整理我所理解的基金笔记                                 :event:
+SCHEDULED: <2021-12-08 周三 00:00>
+** TODO [#A] 学习晨星网投资教程并记录                               :event:
+SCHEDULED: <2021-12-06 周一 16:12 +1d>
+:PROPERTIES:
+:STYLE:    habit
+:LOGGING: logrepeat DONE(@)
+:END:
 * Appointment
 ** WAIT 购买xbox精英二代手柄                                     :shopping:
 <2021-11-01 周一 09:00>
