[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -38,12 +38,22 @@ DEADLINE: <2021-12-12 周日 23:00 +1m> SCHEDULED: <2021-12-12 周日 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2021-12-13 周一 23:00 ++1w> SCHEDULED: <2021-12-11 周六 18:00 ++1w>
+DEADLINE: <2021-12-20 周一 23:00 ++1w> SCHEDULED: <2021-12-18 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-12-04 周六 15:55]
+:LAST_REPEAT: [2021-12-11 周六 16:34]
 :END:
+- State "DONE"       from "TODO"       [2021-12-11 周六 16:34] \\
+  1. 新增了星级底图映射, 头像框, spine光环目前都跟角色的星级相关
+  2. 删除英雄山装备稀有度, 统一使用道具品质代替
+  3. 除了镇魔以外的备战实现了战场角色属性刷新, 镇魔因为独特的英雄对象目前尚未处理
+  4. 完成了游戏功能和玩法的整理
+  5. 完成编写年报
+  ------------------------------------------------
+  1. 和肥仔一起进行一个弹射世界的玩
+  2. 自学unity
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-12-04 周六 15:55] \\
   1. 给所有带有品质的装备, 道具增加底图, 并根据品质变色
   2. 给英雄对象添加光环, 根据英雄的稀有度绝对表现
@@ -600,13 +610,17 @@ DEADLINE: <2021-12-30 周四 23:00 ++1m> SCHEDULED: <2021-12-30 周四 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** TODO [#A] 整理我所理解的基金笔记                                 :event:
+** TODO [#A] 整理基金知识                                           :event:
 SCHEDULED: <2021-12-08 周三 00:00>
 ** TODO [#A] 学习晨星网投资教程并记录                               :event:
-SCHEDULED: <2021-12-06 周一 16:12 +1d>
+SCHEDULED: <2021-12-08 周三 16:12 +1d>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
+:LAST_REPEAT: [2021-12-08 周三 13:23]
+:END:
+- State "DONE"       from "TODO"       [2021-12-08 周三 13:23] \\
+  [[file:../ref/morningstar/featured/保持投资.org][保持投资]]
 ** TODO [#A] 整理财务情况, 设计投资计划                             :event:
 SCHEDULED: <2021-12-20 周一 19:59 +1m>
 :PROPERTIES:
