--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -1,9 +1,180 @@
 #+STARTUP: INDENT NUM
 
 * 职业
+** 定位
 1. 你能犯下的最大错误就是相信自己在为别人工作, 永远记住, 工作是属于公司的, 职业生
    涯是属于自己的
 2. 把软件开发事业当做一桩生意来看待, 你所做的和中世纪的铁匠打铁没什么不同, 只要我
    们的技能还在, 随时可以换个地方另起炉灶
 3. 把你所在的公司当做你的客户, 你的产品是提供开发软件这项服务, 售卖的就是把一个想
    法变为数字化的能力
+** 目标
+1. 坐下来，为你的职业生涯设置至少一个大目标。
+2. 将大目标分解成相应的若干小目标, 例如:
+   - 月度目标
+   - 周目标
+   - 每日目标
+   把你的大目标写在自己每天的必经之地, 每日三省吾身——我在追求什么.
+** 人际交往
+1. 事实上大部分工作都是在跟人打交道, 尽管你写的是代码, 但是你的需求, 你都验收都是
+   由人来完成的
+2. 几个核心交往方式(参考<人性的弱点>):
+   - 保护别人的自尊心
+   - 鼓励代替批评
+   - 换位思考
+   - 避免争吵
+** 面试
+1. 提前与你的面试官建立联系能够大大增加你成功地几率
+2. 面试时要在技术上证明你确实能够胜任这项工作, 如果还能证明自己会积极主动的展开工
+   作, 那么成功几率更高
+3. 无论是否想要换工作, 多多面试来增加经验
+** 就业方向
+*** 雇员
+pros: 稳定, 轻松
+cons: 不自由, 收入有上限
+*** 个人咨询
+pros: 自由, 收入高
+cons: 自己要负责打理业务
+*** 创业
+pros: 巨大赚钱潜力, 没有老板, 可以选择想做的事业
+cons: 需要多种技能, 风险大, 长时间工作
+** 专业化
+1. 专业化的规则是: 专业化程度越深, 潜在的就业机会越少, 但成功的几率越高
+2. 常见的专业领域:
+   - Web开发栈
+   - 嵌入式系统
+   - 特定的操作系统
+   - 移动开发
+   - 框架
+   - 软件系统
+3. 优先专精与一个方面, 然后再扩展分支
+** 公司区别
+在选择公司之前, 一定要考察公司的特性是否适合自己.
+*** 规模
+| 公司规模     | 优点                                 | 缺点                       |
+|--------------+--------------------------------------+----------------------------|
+| 小公司       | 机会多, 对公司影响大, 潜在回报大     | 工作繁重, 稳定性差         |
+| 中等规模公司 | 工作稳定, 加班较少                   | 变化慢, 没机会使用前沿技术 |
+| 大公司       | 流程完备, 培训机会多, 有影响力的项目 | 官僚主义, 很难获得关注     |
+*** 主业
+| 公司主业         | 特点                                   |
+|------------------+----------------------------------------|
+| 主业是软件开发   | 更加重视软件开发人员, 拥抱新技术       |
+| 主业不是软件开发 | 发展空间小, 不够尊重开发人员, 变化缓慢 |
+
+** 晋升
+*** 勇于承担职责
+在大多数情况下, 承担更多的责任能让你获得更多晋升的机会, 比如维护某个无人愿意处理
+模块, 维护文档, 积极帮助新人成长等等
+*** 引人注目
+必须要让你的上级知道你在工作, 所以每周给你的上级发送工作总结. 适当的演讲和培训也
+能增加你的知名度
+*** 自学
+不断学习来增加自己的技能, 比如考取资格证书, 这能够证明你在不断提升自己
+*** 解决难题
+一个公司中最重要的就是那种看似没有问题让他解决不了的人, 如果你愿意去钻研, 愿意去
+解决别人解决不了的问题, 你将获得晋升
+*** 离职
+当你采取以上四个步骤依然没有看到晋升希望的时候, 果断辞职去寻找更好的工作
+** 成为专家
+专家是什么, 专家就是严肃对待自己的职责和事业, 愿意做出最艰难的选择去做自认为正确
+的事. 用于承认错误, 勇于承担责任.
+成为专家的步骤(可能):
+1. 养成良好的习惯, 专业习惯, 时间管理等等
+   1. 习惯的三个组成部分:
+    - 触机 :: 让你行动展开的原因
+    - 奖励 :: 跟行为直接相关的奖励
+    - 行为 :: 就是我们惯性做的事
+    触机下我们难以抵抗奖励的诱惑, 于是行为产生了
+   2. 养成习惯也要依照这个规律来执行, 找到奖励(必须对它有渴望), 设定触机, 不断在
+      触机和奖励之间重复行为
+   3. 改变习惯一般不会调整奖励和触机(这样很难), 一般只是调整行为, 在这个过程中需
+      要信念来坚持
+   4. 识别自己的习惯也分三步, 第一步了解自己的惯性行为, 这个一般是显而易见的, 第
+      二步寻找奖励, 因为没有奖励自己就不会一直做. 通过不断尝试来发现行为哪个部分
+      让自己愉悦, 最后一步寻找触机, 观察自己是在什么时候会有这个渴望的.
+2. 坚持正确的道路, 即便抉择可能会危害自身的福祉, 只要它是正确的也要坚持下去, 很多
+   时候听外行的建议就像医生听病人的意见来治病一样可笑
+3. 追求自我提高, 不断完善品质, 碰到问题不该降低标准, 而是完善自己的能力来解决问题
+
+** 辞职
+1. 再辞职之前一定要有明确的计划, 总而言之就是有充足的准备之后再辞职
+2. 如果准备自己创业, 一定要在离职之前将创业的内容作为副业来评估离职之后的工作强度,
+   确保自己真的能够承受这种工作强度
+3. 实际上每天真正工作的时间可能只有4个小时(8小时制), 你会偷懒, 会聊天, 会开会看
+   信息, 扣掉这些每天工作只有4小时. 而你为自己工作很可能会真正的干满8个小时, 甚至
+   更多.
+
+** 自由职业者
+1. 在开始之前, 一定要有一定的稳定客户
+2. 学会使用各种手段推销自己, 比如免费分享, 大会演讲等等, 这样可以得到更多的客户
+3. 自由职业者的时薪至少为你全职时期的两倍, 因为成为自由职业者后会有很多额外的支出
+4. 向客户推销时, 不要只说自己会什么, 而要告诉客户你能让他得到什么, 获得哪些收益
+
+** 创建产品
+1. 在开发你的产品之前, 一定要先找到受众, 没有受众的产品是没用的
+2. 可以在社区内观察, 询问来寻找客户们的痛点, 针对性的创建产品
+3. 可以通过预付款折扣的方式来测试产品市场, 看是否有人愿意买单(类似于游戏的EA)
+4. 从小处着手, 一开始开发的产品目标不要太大, 大型产品的主要问题在于在没有投入大量
+   的研发之前很难看到成果
+
+** 自主创业
+*** 创业的两种类型
+- 不引入外部投资, 自力更生长久创业
+- 吸引投资, 业务成型后上市或者卖出快速变现
+*** 变现型创业的一般周期
+                 \rightarrow \rightarrow
+                \uparrow n \downarrow
+孵化器->种子基金->A轮融资->成功
+          \uparrow       \uparrow
+       天使投资人 风险投资人
+
+** 远程工作
+远程工作面临很多挑战:
+1. 时间管理, 你必须要为你在家工作安排一个严格的工作计划并遵守, 因为家中总有各种各
+   样的诱惑, 不遵守的话你将毫无产出
+2. 克服孤独, 一开始单人工作可能感觉很不错. 但由于人是社交生物, 你必须要走出去, 跟
+   他人社交
+3. 自我激励, 没有持续的自我激励是很难远程工作的, 在公司时你在办公室偷懒会被炒鱿鱼,
+   但在家里没有这种驱动. 有一种简单地办法, 先告诉自己全神贯注工作15分钟, 15分钟后
+   你会发现继续工作容易一点了, 这个叫做动量效应.
+
+** 自信心
+1. 在面对任何事情之前, 要假装自己能成功, 要在内心中相信自己具有完成这项工作的能力,
+   时刻想象着成功地场景. 即便自己的能力远远不够, 也要有客服一切的信念
+2. 要将这种自信付诸实践, 最适合的场景就是在面试的时候, 没有人能够在面试时掌握面试
+   岗位所需要的全部技能, 但是要有迎难而上的勇气. 你的自信是会有感染力的, 当你全心
+   全意相信自己的时候, 别人对此也会深信不疑.
+
+** 简历
+*** 雇佣简历写手
+我们的简历之所以看起来如此糟糕, 是因为我们不是专业的, 所以我们可以聘请专业的简历
+写手. 尽管会付出不菲的价格, 但是回报远远大于你的付出
+1. 在聘请之前要看他之前的工作产品来确保他符合你的要求
+2. 要够他足够丰富的准确的信息, 是他能够提炼并包装
+*** 自己撰写
+| 提示              | 好处                                                                   |
+|-------------------+------------------------------------------------------------------------|
+| 简历放到网上      | 确保雇主很容易访问你的简历                                             |
+| 简历要有创意      | 样式不落俗套, 别人一眼看去就会被深深吸引                               |
+| 使用行动-结果描述 | 你的简历应该展现你的工作及结果, 这样潜在的雇主能了解你会干什么以及成果 |
+| 校对              | 即便聘请别人来编写, 你也要通篇进行校对                                 |
+** 不要陷入技术狂热
+1. 我们每个人或多或少都是某种技术的信徒, 但因为我们熟悉, 喜爱这种技术, 有时会下意
+   识的反对其他技术
+2. 大多数普遍应用的技术都有其闪光点, 否则不会有这么大的适用范围
+所以没有必要强烈坚持自己选择的技术就是最好的, 如果固执己见, 最终受苦的只是自己,
+如果你对技术保持开放心态, 你会发现更多的机会为你敞开大门
+
+* 营销
+** 营销为何重要
+无论你是否意识到, 你实际上每时每刻都在营销自己, 当希望别人接受你的想法时, 实际上
+也在隐形的推销自己.
+1. 自我营销能够让你拥有更大的出名度, 更多的工作机会, 更高的薪酬, 就像酒店驻唱和明星
+   一样, 他们的唱功也许没有本质的区别, 但是营销让他们完全不同.
+2. 自我营销的持续方式就是为他人提供价值, 一些常见的手段如下:
+   - 博客
+   - 视频
+   - 杂志投稿
+   - 书籍
+
