--- a/src/org/ref/morningstar/featured/保持投资.org
+++ b/src/org/ref/morningstar/featured/保持投资.org
@@ -1,11 +1,67 @@
 #+STARTUP: INDENT NUM
 
 * 保持长久投资
-  从长远来看, 保持投资能够比频繁的低买高卖获得更大的收益.
-  而大型, 小型股票提供的收益远远大于债券, 定期等投资的收益, 如图:
+  1. 从长远来看, 保持投资能够比频繁的低买高卖获得更大的收益.
+  2. 大型, 小型股票提供的收益远远大于债券, 定期等投资的收益, 如图:
   [[file:../../../res/image/profit.jpg]]
 
-  这是从1926年以1$开始投资, 通过小型股票到2019年资产变为39381$, 而政府债券等投资
-  的收益仅仅比通货膨胀快一点. 但是也能通过图看出股票的波动是远远大于证券的, 这也意味
-  股票有着巨大的风险.
-  总而言之, 股票能提供最大的回报, 但是有最高的风险.
+  这是从1926年以1$开始投资, 投资小型股票到2019年资产变为39381$, 而政府债券等投资
+  的收益仅仅比通货膨胀快一点. 还能通过增长图看出股票的波动是远远大于证券的, 这也
+  意味着股票有着巨大的风险.
+  #+begin_quote
+  股票能提供最大的回报, 但是有最高的风险.
+  #+end_quote
+
+* 负收益市场投资回报
+1. 在市场低迷时终止投资很可能剥夺未来获得收益的机会
+   如图所示:
+   [[file:../../../res/image/periods_of_stock.png]]
+   历史规律告诉我们, 经历过若干个低迷时期后, 一般会迎来超过平均收益的高潮期
+2. 低迷时期投资策略
+   1. 维护一个多元化投资组合来分散风险
+   2. 不要一次性投资
+   3. 减少新的投资
+   最终等到市场复苏的人将得到最大的回报
+  #+begin_quote
+  投资者需要拥有纪律和耐心
+  #+end_quote
+3. 分散投资不是银弹
+   如果整个市场低迷, 那么大概率所有的投资都会收到影响, 或多或少的问题, 所以即便
+   分散投资也不能保证在低迷期不亏损
+   
+* 危机和长期投资表现
+1. 市场涨跌是规律
+   经济和市场会周期性的增长和衰退(不过总体趋于上涨)
+   [[file:../../../res/image/market_cycle.png]]
+2. 不要预测市场
+   总有人想要在低点买入高点卖出, 但是实际上根本没有办法预测什么时候是高点, 什么时
+   候是点, 所以大部分人要么在下降时没有及时撤离而损失了大量的财富, 要么突然上涨时
+   买入导致错过了大量的增量
+3. 长期持有
+   每一次经济危机发生, 都会感觉这是最糟糕的一次, 但历史数据表明长期持有的回报要远
+   大于危机的损失. 尽管发生了四次危机, 但平均年化收益率达到了10.7%
+   #+begin_quote
+   历史数据表明, 长期持有会获得回报
+   #+end_quote
+
+* 经济衰退后的股市表现
+1. 一般来说小盘股票的回报优于大盘股票, 如图所示:
+   [[file:../../../res/image/stock_performance.png]]
+   分散投资时将一部分资金投入到小盘股票可以有效提高回报率, 尤其是走出经济衰退后
+   #+begin_quote
+   经济衰退开始复苏后, 小盘股票的累积回报远超大盘股票
+   #+end_quote
+2. 小盘股票相比于大盘不稳定性更大, 非常容易受到经济危机, 商业风险的影响
+
+* 利率历史
+1. 利率反映了经济循环的变化, 利率低的时候刺激消费, 利率高的时候限制消费
+2. 下图反映了自1957年以来利率的最高, 平均, 当前值
+[[file:../../../res/image/interest_rate.png]]
+当前利率处于历史最低是因为新冠让经济极大衰退, 政府希望刺激消费
+#+begin_quote
+联邦政府通过在联邦市场买卖证券来设置联邦基金利率
+#+end_quote
+* 总结
+市场总是周期变化的, 有涨就会有落, 有投资者试图预测市场来在循环中保持优势, 但是
+预测时机这件事有很大的风险, 也不保证有效. 有时还会适得其反. 历史数据表明, 保持
+投资是正确的选择.
