--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,10 +13,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 大壮名城G1-1018租房月志                                :event:
-DEADLINE: <2021-12-12 周日 23:00 +1m> SCHEDULED: <2021-12-12 周日 09:00 +1m>
+DEADLINE: <2022-01-12 周三 23:00 +1m> SCHEDULED: <2022-01-12 周三 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
+- State "DONE"       from "TODO"       [2021-12-12 周日 10:26] \\
+  1. 房租2000, 电费80(空调+电脑), 物业+水117, 网费100
 - State "DONE"       from "TODO"       [2021-11-12 周五 16:57] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
@@ -632,6 +634,16 @@ SCHEDULED: <2021-12-12 周日 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
+:END:
+:LOGBOOK:
+CLOCK: [2021-12-12 周日 17:38]--[2021-12-12 周日 18:03] =>  0:25
+CLOCK: [2021-12-12 周日 17:08]--[2021-12-12 周日 17:33] =>  0:25
+CLOCK: [2021-12-12 周日 16:32]--[2021-12-12 周日 16:58] =>  0:26
+CLOCK: [2021-12-12 周日 16:02]--[2021-12-12 周日 16:27] =>  0:25
+CLOCK: [2021-12-12 周日 15:32]--[2021-12-12 周日 15:57] =>  0:25
+CLOCK: [2021-12-12 周日 15:02]--[2021-12-12 周日 15:27] =>  0:25
+CLOCK: [2021-12-12 周日 11:06]--[2021-12-12 周日 11:31] =>  0:25
+CLOCK: [2021-12-12 周日 10:28]--[2021-12-12 周日 10:53] =>  0:25
 :END:
 * Appointment
 ** WAIT 购买xbox精英二代手柄                                     :shopping:
