[org]update note

--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -57,14 +57,16 @@ SCHEDULED: <2021-12-18 周六 18:00 ++1w> DEADLINE: <2021-12-20 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-12-10 周五 09:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                   :learn:
+SCHEDULED: <2021-12-15 周三 09:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-12-09 周四 13:40]
+:LAST_REPEAT: [2021-12-14 周二 10:05]
 :END:
 
+- State "DONE"       from "TODO"       [2021-12-14 周二 10:05]
+- State "DONE"       from "TODO"       [2021-12-13 周一 09:28]
 - State "DONE"       from "TODO"       [2021-12-09 周四 13:40]
 - State "DONE"       from "TODO"       [2021-12-08 周三 10:43]
 - State "DONE"       from "TODO"       [2021-12-07 周二 10:37]
@@ -258,28 +260,14 @@ SCHEDULED: <2021-11-29 周一 09:34>
 ** TODO [#A] 学习《代码之外的生存指南》                             :learn:
 SCHEDULED: <2021-11-20 周六 +1d>
 :LOGBOOK:
+CLOCK: [2021-12-13 周一 20:04]--[2021-12-13 周一 20:29] =>  0:25
+CLOCK: [2021-12-13 周一 15:08]--[2021-12-13 周一 15:33] =>  0:25
 CLOCK: [2021-12-11 周六 16:26]--[2021-12-11 周六 16:33] =>  0:07
 CLOCK: [2021-12-11 周六 14:21]--[2021-12-11 周六 14:46] =>  0:25
 CLOCK: [2021-12-10 周五 20:27]--[2021-12-10 周五 20:52] =>  0:25
 CLOCK: [2021-12-10 周五 19:57]--[2021-12-10 周五 20:22] =>  0:25
 :END:
-** TODO [#A] 处理备战界面属性未刷新的问题                              :m8:
-:PROPERTIES:
-:Effort:   4:00
-:END:
-:LOGBOOK:
-CLOCK: [2021-12-10 周五 17:27]--[2021-12-10 周五 17:40] =>  0:13
-CLOCK: [2021-12-10 周五 16:52]--[2021-12-10 周五 17:17] =>  0:25
-CLOCK: [2021-12-10 周五 16:22]--[2021-12-10 周五 16:47] =>  0:25
-CLOCK: [2021-12-10 周五 15:32]--[2021-12-10 周五 15:57] =>  0:25
-CLOCK: [2021-12-10 周五 14:48]--[2021-12-10 周五 15:13] =>  0:25
-CLOCK: [2021-12-10 周五 13:49]--[2021-12-10 周五 14:14] =>  0:25
-CLOCK: [2021-12-10 周五 13:19]--[2021-12-10 周五 13:44] =>  0:25
-CLOCK: [2021-12-10 周五 11:28]--[2021-12-10 周五 11:39] =>  0:11
-CLOCK: [2021-12-10 周五 10:58]--[2021-12-10 周五 11:23] =>  0:25
-CLOCK: [2021-12-10 周五 10:28]--[2021-12-10 周五 10:53] =>  0:25
-:END:
-** Archive                                                         :ARCHIVE:
+** Archive                                                        :ARCHIVE:
 *** DONE [#A] 优化新表现存在的问题                                     :m8:
 CLOSED: [2021-11-30 周二 15:42] SCHEDULED: <2021-11-17 周三 09:12>
 :PROPERTIES:
@@ -335,6 +323,29 @@ CLOSED: [2021-12-09 周四 16:57] SCHEDULED: <2021-12-07 周二 16:57>
 :PROPERTIES:
 :ARCHIVE_TIME: 2021-12-11 周六 16:38
 :END:
+*** DONE [#A] 处理备战界面属性未刷新的问题                             :m8:
+CLOSED: [2021-12-13 周一 14:59] SCHEDULED: <2021-12-10 周五 09:12>
+:PROPERTIES:
+:Effort:   4:00
+:ARCHIVE_TIME: 2021-12-18 周六 18:01
+:END:
+:LOGBOOK:
+CLOCK: [2021-12-13 周一 14:35]--[2021-12-13 周一 14:59] =>  0:24
+CLOCK: [2021-12-13 周一 13:40]--[2021-12-13 周一 14:05] =>  0:25
+CLOCK: [2021-12-13 周一 13:10]--[2021-12-13 周一 13:35] =>  0:25
+CLOCK: [2021-12-13 周一 11:25]--[2021-12-13 周一 11:50] =>  0:25
+CLOCK: [2021-12-13 周一 10:55]--[2021-12-13 周一 11:20] =>  0:25
+CLOCK: [2021-12-10 周五 17:27]--[2021-12-10 周五 17:40] =>  0:13
+CLOCK: [2021-12-10 周五 16:52]--[2021-12-10 周五 17:17] =>  0:25
+CLOCK: [2021-12-10 周五 16:22]--[2021-12-10 周五 16:47] =>  0:25
+CLOCK: [2021-12-10 周五 15:32]--[2021-12-10 周五 15:57] =>  0:25
+CLOCK: [2021-12-10 周五 14:48]--[2021-12-10 周五 15:13] =>  0:25
+CLOCK: [2021-12-10 周五 13:49]--[2021-12-10 周五 14:14] =>  0:25
+CLOCK: [2021-12-10 周五 13:19]--[2021-12-10 周五 13:44] =>  0:25
+CLOCK: [2021-12-10 周五 11:28]--[2021-12-10 周五 11:39] =>  0:11
+CLOCK: [2021-12-10 周五 10:58]--[2021-12-10 周五 11:23] =>  0:25
+CLOCK: [2021-12-10 周五 10:28]--[2021-12-10 周五 10:53] =>  0:25
+:END:
 * Appointment
 * Project
 ** SCH [#A] 战斗表现学习                                               :m8:
@@ -353,7 +364,57 @@ CLOSED: [2021-11-01 周一 14:11] SCHEDULED: <2021-10-19 周二 20:46>
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 *** TODO spine动画
-SCHEDULED: <2021-11-01 周一 14:11>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+** SCH [#A] 第四版战斗协议解析                                         :m8:
+SCHEDULED: <2021-12-14 周二 10:19> DEADLINE: <2021-12-22 周三 10:19>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+*** DONE 制定协议
+CLOSED: [2021-12-15 周三 09:51] SCHEDULED: <2021-12-14 周二>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+:LOGBOOK:
+CLOCK: [2021-12-14 周二 11:05]--[2021-12-14 周二 11:30] =>  0:25
+CLOCK: [2021-12-14 周二 10:35]--[2021-12-14 周二 11:00] =>  0:25
+:END:
+*** DONE 编写解析器                          
+CLOSED: [2021-12-18 周六 17:56] SCHEDULED: <2021-12-15 周三 09:51>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+:LOGBOOK:
+CLOCK: [2021-12-16 周四 20:29]--[2021-12-16 周四 20:54] =>  0:25
+CLOCK: [2021-12-16 周四 19:59]--[2021-12-16 周四 20:24] =>  0:25
+CLOCK: [2021-12-16 周四 19:24]--[2021-12-16 周四 19:49] =>  0:25
+CLOCK: [2021-12-16 周四 18:54]--[2021-12-16 周四 19:19] =>  0:25
+CLOCK: [2021-12-16 周四 17:18]--[2021-12-16 周四 17:43] =>  0:25
+CLOCK: [2021-12-16 周四 16:48]--[2021-12-16 周四 17:13] =>  0:25
+CLOCK: [2021-12-16 周四 16:18]--[2021-12-16 周四 16:43] =>  0:25
+CLOCK: [2021-12-16 周四 15:48]--[2021-12-16 周四 16:13] =>  0:25
+CLOCK: [2021-12-16 周四 15:13]--[2021-12-16 周四 15:38] =>  0:25
+CLOCK: [2021-12-16 周四 14:43]--[2021-12-16 周四 15:08] =>  0:25
+CLOCK: [2021-12-16 周四 14:13]--[2021-12-16 周四 14:38] =>  0:25
+CLOCK: [2021-12-16 周四 13:43]--[2021-12-16 周四 14:08] =>  0:25
+CLOCK: [2021-12-15 周三 17:20]--[2021-12-15 周三 17:45] =>  0:25
+CLOCK: [2021-12-15 周三 16:50]--[2021-12-15 周三 17:15] =>  0:25
+CLOCK: [2021-12-15 周三 16:15]--[2021-12-15 周三 16:40] =>  0:25
+CLOCK: [2021-12-15 周三 15:45]--[2021-12-15 周三 16:10] =>  0:25
+CLOCK: [2021-12-15 周三 15:15]--[2021-12-15 周三 15:40] =>  0:25
+CLOCK: [2021-12-15 周三 14:27]--[2021-12-15 周三 14:52] =>  0:25
+CLOCK: [2021-12-15 周三 13:52]--[2021-12-15 周三 14:17] =>  0:25
+CLOCK: [2021-12-15 周三 13:22]--[2021-12-15 周三 13:47] =>  0:25
+CLOCK: [2021-12-15 周三 11:22]--[2021-12-15 周三 11:47] =>  0:25
+CLOCK: [2021-12-15 周三 10:52]--[2021-12-15 周三 11:17] =>  0:25
+CLOCK: [2021-12-15 周三 10:22]--[2021-12-15 周三 10:47] =>  0:25
+CLOCK: [2021-12-15 周三 09:52]--[2021-12-15 周三 10:17] =>  0:25
+:END:
+*** TODO 对接测试
+SCHEDULED: <2021-12-18 周六 17:56>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
