--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -177,4 +177,51 @@ cons: 需要多种技能, 风险大, 长时间工作
    - 视频
    - 杂志投稿
    - 书籍
+** 打造个人品牌
+品牌不仅仅是形象, 而是树立了客户对你的期望, 而且这些期望也必修能实现.
+*** 品牌的四要素
+- 品牌要传递的信息 :: 你的品牌究竟是做什么的
+- 品牌的一致性 :: 品牌的内容应该是符合一致性的基本观念的, 品牌给客户的体验应该一致
+- 品牌的视觉形象 :: 一个品牌应该有标识, 有助于提高品牌的辨识度并加速传播
+- 品牌的曝光度 :: 品牌传播的频率越高, 范围越广, 被人记住的概率就越大
+*** 创建品牌的步骤
+1. 明确要传达的品牌信息
+2. 挑选细分市场
+3. 创建品牌口号
+4. 创建电梯内销售概要(即乘坐一个电梯的时间内可以浏览完毕的概要)
+5. 创建视觉符号
+创建完毕后, 要通过博客, 社交媒体, 培训, 著书立说等方式来传播你的品牌
 
+** 创建博客
+作为一名软件开发从业人员, 用来推销自己的最佳媒介就是博客(weblog).
+即便使用面对面的方式交流, 你只能遇到有限的人, 而使用博客, 你能遇到数十万的人
+*** 功利角度
+面试的时候短短几十分钟, 一份简历, 很难衡量一个软件开发人员的真实水平, 但是通过博
+客可以让人了解一个开发人员的真实水准. 并且博客也可以让你成为一个传道者. 带给你意
+想不到的机会.
+即便上述内容没那么有效, 但有一点是无法抹杀的, 他可以提高你的沟通技巧, 组织自己的
+思想并将其转化为文字, 这是一个很珍贵的技能.
+*** 创建博客
+1. 决定使用哪种托管服务(免费的, 付费的, 还是VPS), 如果使用免费的一定要保护好自己
+   域名, 这是博客里的重要资产
+2. 安装并设置博客软件
+3. 配置主题
+4. 开始撰写
+*** 成功博客的要素
+1. 每周至少一篇, 二到三篇更佳, 保持更新是博客越来越多是关键
+2. 提供高质量的内容, 不一定要完美, 但一定要将你认为有价值的东西提供上去
+做到这两点, 基本上就成功了
+
+** 为他人创造价值
+不要努力成为一个成功的人, 而要努力成为一个有价值的人, 如果你能够帮足够多人获得
+他们想要的, 你就会得到自己想要的东西
+*** 瞄准领域
+你提供的有价值的信息应该直接瞄准你所选定的领域, 并为该领域带来价值, 让别人关注
+你的文章, 那说明你的文章能为他们创造价值
+*** 内容免费
+将你分享的内容的90%都做成免费的, 免费的更易于分享, 更能提高你的知名度, 当你需要
+收费的时候, 人们出于回报的心理会乐于想你付费. 并且这也是一项对未来的投资, 通过这
+个投资, 你能收获更高的薪水, 获得更多的客户
+*** 帮助他人
+事实证明, 最富有创造力的人也是最乐于助人的人, 你帮助的人越多, 解决的问题就越多,
+解决自己的问题就越容易, 遇到困难时就会有更多的人伸出援手
