--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -40,12 +40,20 @@ DEADLINE: <2022-01-12 周三 23:00 +1m> SCHEDULED: <2022-01-12 周三 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2021-12-20 周一 23:00 ++1w> SCHEDULED: <2021-12-18 周六 18:00 ++1w>
+DEADLINE: <2021-12-27 周一 23:00 ++1w> SCHEDULED: <2021-12-25 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-12-11 周六 16:34]
+:LAST_REPEAT: [2021-12-18 周六 17:57]
 :END:
+- State "DONE"       from "TODO"       [2021-12-18 周六 17:57] \\
+  1. 处理备战界面属性角色属性再升级/升星后未刷新的问题
+  2. 实现了第四版战斗解析器:
+     - 加入了行动概念
+     - 技能下面的所有子命令全部串行执行
+     - 行动和行为下子命令全部并行执行
+  ------------------------------------------------
+  1. 弹射世界还阔以, 挺好玩的
 - State "DONE"       from "TODO"       [2021-12-11 周六 16:34] \\
   1. 新增了星级底图映射, 头像框, spine光环目前都跟角色的星级相关
   2. 删除英雄山装备稀有度, 统一使用道具品质代替
@@ -630,11 +638,13 @@ SCHEDULED: <2021-12-20 周一 19:59 +1m>
 :LOGGING: logrepeat DONE(@)
 :END:
 ** TODO [#A] 自学unity                                              :event:
-SCHEDULED: <2021-12-12 周日 09:00 +1w>
+SCHEDULED: <2021-12-19 周日 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
+:LAST_REPEAT: [2021-12-13 周一 09:08]
 :END:
+- State "DONE"       from "TODO"       [2021-12-13 周一 09:08]
 :LOGBOOK:
 CLOCK: [2021-12-12 周日 17:38]--[2021-12-12 周日 18:03] =>  0:25
 CLOCK: [2021-12-12 周日 17:08]--[2021-12-12 周日 17:33] =>  0:25
