--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -225,3 +225,11 @@ cons: 需要多种技能, 风险大, 长时间工作
 *** 帮助他人
 事实证明, 最富有创造力的人也是最乐于助人的人, 你帮助的人越多, 解决的问题就越多,
 解决自己的问题就越容易, 遇到困难时就会有更多的人伸出援手
+
+** 社交媒体
+灵活的运用社交媒体可以有效的增加你的知名度, 通过以下方式来培育你的受众
+1. 将自己社交媒体的连接放到文章, 博客的结尾处
+2. 在社交媒体上分享有价值的内容
+3. 保持活跃度, 每周至少都要有产出(通过使用Buffer类似的工具来一次性同步全部社交平
+   台的更新)
+4. 推荐使用Twitter和LinkedIn作为你的主要社交媒体
